--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -31,5 +31,6 @@ jobs:
           pip install pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest
-        run: |
-          python -m pytest -v --import-mode=append .
+        run: |          
+          coverage run -m pytest -v
+          coverage report
