--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.11"]
 
     steps:
       - uses: actions/checkout@v3
@@ -34,6 +34,7 @@ jobs:
         run: |          
           coverage run -m pytest -v
           coverage html
+          rm -rf htmlcov/.gitignore
       - name: Publish coverage report to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
