--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -29,12 +29,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip          
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
       - name: Test with pytest
         run: |          
-          coverage run -m pytest -v
-          coverage html --omit="test*"
-          rm -rf htmlcov/.gitignore
+          pytest
       - name: Publish coverage report to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
