--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pytest = "*"
+
 
 [dev-packages]
+pytest = "*"
+mypy = "*"
+
 
 [requires]
 python_version = "3.11"
