--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,26 @@
+[build-system]
+requires = ["setuptools>=42.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [tool.ruff]
-ignore = ["E501"]
+line-length = 100
+
+[tool.pytest.ini_options]
+addopts = "--cov=fizzbuzz --cov-report html"
+testpaths = [
+    "tests",
+]
+
+[tool.mypy]
+mypy_path = "src"
+check_untyped_defs = true
+disallow_any_generics = true
+ignore_missing_imports = true
+no_implicit_optional = true
+show_error_codes = true
+strict_equality = true
+warn_redundant_casts = true
+warn_return_any = true
+warn_unreachable = true
+warn_unused_configs = true
+no_implicit_reexport = true
