--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip          
           if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
+          python -m pip install -e .
       - name: Test with pytest
         run: |          
           pytest
