--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -34,6 +34,11 @@ jobs:
       - name: Test with pytest
         run: |          
           pytest
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/master'
+    steps:
       - name: Publish coverage report to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
