--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -36,7 +36,7 @@ jobs:
           pytest
   deploy:
     runs-on: ubuntu-latest
-    needs: test
+    needs: tests
     if: github.ref == 'refs/heads/master'
     steps:
       - name: Publish coverage report to GitHub Pages
